--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -122,5 +122,16 @@
         app:layout_constraintBottom_toTopOf="@+id/newThinPizza"
         app:layout_constraintEnd_toEndOf="@+id/newThinPizza" />
 
+    <Button
+        android:id="@+id/getDiscount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="25dp"
+        android:text="getDiscount5$"
+        app:layout_constraintBottom_toTopOf="@+id/standartPizza"
+        app:layout_constraintEnd_toEndOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
